# crabrl

./: .gitattributes  .gitignore  .rustfmt.toml  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: parser.rs
benchmarks/: compare.py  compare_performance.py
benchmarks/fixtures/alphabet/: goog-20231231.xsd  goog-20231231_cal.xml  goog-20231231_htm.xml
benchmarks/fixtures/tesla/: tsla-20231231.xsd  tsla-20231231_def.xml  tsla-20231231_htm.xml
examples/: benchmark_single.rs  parse.rs  validate.rs
fixtures/: sample-sec.xml
scripts/: download_fixtures.py  generate_benchmark_charts.py  generate_clean_benchmarks.py
src/: allocator.rs  cache.rs  instance.rs  lib.rs  linkbase.rs  main.rs  model.rs  parser.rs  parser_base.rs  schema.rs  sec.rs  simd.rs  simple_parser.rs  taxonomy.rs  validator.rs
